# tinylord

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  plan.md  tinylord.js  tinylord.toml
assets/: admin-ui.js  admin-ui.riot  riot.min.js
docs/: api.md  index.html
src/: auth.rs  config.rs  encryption.rs  errors.rs  ids.rs  limits.rs  main.rs  proxy.rs  query.rs  realtime.rs  system.rs
src/api/: admin.rs  browser_auth.rs  documents.rs  indexes.rs  mod.rs  pubsub.rs  query_ep.rs
src/db/: mod.rs  pragmas.rs  reader.rs  schema.rs  writer.rs
tests/: integration.rs  tinylord_client.mjs
