[package]
name = "tinylord"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "A tiny schemaless realtime document datastore backed by one SQLite file per database"
authors = ["tudisco.biz"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tudisco/tinylord"
keywords = ["sqlite", "database", "realtime", "sse", "document-store"]
categories = ["database-implementations", "web-programming::http-server"]

[[bin]]
name = "tinylord"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP stack
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace", "fs"] }

# SQLite + SQLCipher (encryption at rest, §20). SQLCipher overrides plain `bundled`.
# `bundled-sqlcipher-vendored-openssl` statically links a vendored OpenSSL so the
# binary stays self-contained. `hooks` provides update_hook for realtime (§5.3).
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "hooks", "functions", "backup"] }
r2d2 = "0.8"
# r2d2_sqlite doesn't expose the vendored-openssl feature; enabling it on rusqlite
# above unifies onto the same rusqlite build. Here we only need the sqlcipher bundle.
r2d2_sqlite = { version = "0.25", features = ["bundled-sqlcipher"] }

# IDs
ulid = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Rate limiting
governor = "0.6"

# Crypto / tokens
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
anyhow = "1"
argon2 = "0.5"

# SSE stream construction
async-stream = "0.3"
futures = "0.3"

# OS keyring key source (§20.2) is optional: it pulls platform crypto backends,
# so it is behind a feature flag and off by default. `key_source = "keyring"`
# without this feature fails fast with a clear message.
keyring = { version = "2", optional = true }

[features]
default = []
keyring = ["dep:keyring"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tempfile = "3"
